# architectum_new

./: .coverage  .gitignore  AGENT.md  arch.bat  epic1_features.yaml  main.py  pyproject.toml  requirements.txt  scan_test.py  setup.py
.architectum/mirrors/: ..json  .coverage.json  .gitignore.json  .pytest_cache.json  .python-version.json  AGENT.md.json  README.md.json  arch.bat.json  arch_blueprint_generator.json  bmad-agent.json  build-agent-cfg.js.json  build-bmad-web-orchestrator.js.json  docs.json  epic1_features.yaml.json  main.py.json  pyproject.toml.json  requirements.txt.json  scan_test.py.json  setup.py.json  tests.json  uv.lock.json
arch_blueprint_generator/: README.md  __init__.py
arch_blueprint_generator/blueprints/: __init__.py  base.py  factory.py  file_based.py  method_based.py
arch_blueprint_generator/cli/: __init__.py  commands.py
arch_blueprint_generator/errors/: __init__.py  exceptions.py
arch_blueprint_generator/extractors/: __init__.py  method_extractor.py
arch_blueprint_generator/models/: __init__.py  detail_level.py  json_mirrors.py  nodes.py  relationship_map.py
architectum-agents/: README-agents.md  ide-bmad-orchestrator-cfg.md  ide-bmad-orchestrator.md  project_init.py
architectum-agents/tasks/: create-prd.md  (+3 more)
bmad-agent/: ide-bmad-orchestrator-cfg.md
bmad-method/: instruction.md
docs/: api-reference.md  architecture.md  cli-guide.md  coding-standards.md  data-models.md  dependencies.md  epic-2.md  index.md  notes.md  prd.md  story-7.1-documentation-framework.md  story-template.md  testing-strategy.md
tests/: conftest.py
(+280 files in other folders)
