[project]
name = "architectum-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.115.12",
    "hypothesis>=6.131.18",
    "networkx>=3.4.2",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "structlog>=25.3.0",
    "typer>=0.15.4",
    "uvicorn>=0.34.2",
]

[project.scripts]
arch = "arch_blueprint_generator.cli.commands:app"

[dependency-groups]
dev = [
    "hypothesis>=6.131.18",
    "mypy>=1.15.0",
    "pact>=1.12.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
